<resources>
    <!-- App Name -->
    <string name="app_name" translatable="false">ORBYS Vote</string>

    <!-- Elements description -->
    <string name="menu_button_desc" translatable="false">Boton de menu del top bar</string>
    <string name="fab_desc" translatable="false">Boton de añadir preguntas</string>
    <string name="exit_button_desc" translatable="false">Exit from the dialog\n</string>
    <string name="qr_code_desc" translatable="false">Imagen con el codigo qr</string>
    <string name="card_type_icon_desc" translatable="false">Icono de cada tipo de pregunta</string>
    <string name="question_type_icon_desc" translatable="false">Icono que representa el tipo de la pregunta</string>
    <string name="app_logo_desc" translatable="false">Logo de la empresa</string>
    <string name="config_icon_desc" translatable="false">Boton para desplegar la configuracion adicional</string>
    <string name="alert_icon_desc" translatable="false">Icono de alerta</string>
    <string name="hotspot_qr_desc" translatable="false">Qr para conectarse al wifi</string>
    <string name="orbys_title_desc" translatable="false">Foto con el logo de la aplicacion</string>
    <string name="ic_wifi_desc" translatable="false">Icono de wifi</string>
    <string name="minimize_button_desc" translatable="false">Boton para minimizar la pantalla</string>

    <!-- Interface Elements -->
    <string name="question_question_hint">Question</string>
    <string name="question_answer_hint">Answer</string>
    <string name="numeric_answer_hint">Maximum number\n</string>
    <string name="launch_button_placeholder">Start</string>
    <string name="send_button_placeholder">Send</string>
    <string name="access_button_placeholder">Access</string>
    <string name="username_text_hint">Username</string>
    <string name="yes_answer_placeholder">Yes</string>
    <string name="no_answers_placeholder">No</string>
    <string name="true_answer_placeholder">True</string>
    <string name="false_answer_placeholder">False</string>
    <string name="login_title_placeholder">Enter username</string>
    <string name="csv_legend_question_type">Type;</string>
    <string name="csv_legend_question_title">Question;</string>
    <string name="csv_legend_answers_title">Answers;</string>
    <string name="csv_legend">Date;Time;IP;Username;Answer</string>
    <string name="max_answers_error">A question cannot have more than 5 answers</string>
    <string name="min_answers_error">A question cannot have less than 2 answers</string>
    <string name="empty_answers_error">Cannot start the question if there are empty fields</string>
    <string name="same_question_error">Cannot start if there are two identical answers</string>
    <string name="no_network_error">No internet connection!</string>
    <string name="storage_permission_denied">Storage permission denied!</string>
    <string name="success_message">Answer successfully sent!</string>
    <string name="confirm_message">You have already answered the question. Do you want to send another answer?</string>
    <string name="user_already_exists_message">A user with the same name already exists</string>
    <string name="file_not_found_message">Could not find the file with the page content</string>
    <string name="user_responded_message">This user has already answered the question</string>
    <string name="time_out_message">The time to answer the question has expired</string>
    <string name="time_in_message">The time to answer the question has not yet expired</string>
    <string name="no_response_message">The server did not receive any response, so no file was generated</string>
    <string name="activity_question_type_title">Select the type of question</string>
    <string name="yesno_question_type_title">Yes/No</string>
    <string name="truefalse_question_type_title">True/False</string>
    <string name="stars_question_type_title">Stars</string>
    <string name="numeric_question_type_title">Numeric</string>
    <string name="other_question_type_title">Others</string>
    <string name="question_question_title">Enter the question</string>
    <string name="question_answer_title">Enter the answers</string>
    <string name="anonymous_radio_title">Users</string>
    <string name="anonymous_question_option_text">Anonymous</string>
    <string name="non_anonymous_question_option_text">User required</string>
    <string name="filter_users_radio_title">Number of answers per user</string>
    <string name="filter_users_question_option_text">One answer</string>
    <string name="non_filter_users_question_option_text">Multiple answers</string>
    <string name="answers_radio_title">Number of possible answers</string>
    <string name="single_answer_question_option_text">Single answer</string>
    <string name="multi_answer_question_option_text">Multiple answers</string>
    <string name="time_checkbox_title">Timer</string>
    <string name="timeout_question_option_text">Time limit</string>
    <string name="minutes_help_text">min</string>
    <string name="download_title">Scan to download the question</string>
    <string name="additional_config_text">Additional settings</string>
    <string name="users_count_title">Users who have responded:</string>
    <string name="time_out_button_text">Finish</string>
    <string name="add_answer_button_text">Add answers</string>
    <string name="close_button_placeholder">Close</string>
    <string name="char_unavailable_message">Answers do not support special characters</string>
    <string name="step_2_hotspot_text">VOTE</string>
    <string name="step_3_hotspot_text">DOWNLOAD</string>
    <string name="step_1_hotspot_text">CONNECT</string>
</resources>