<?xml version="1.0" encoding="utf-8"?>
<!-- Fragmento para crear una nueva pregunta -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true" >

    <!-- Layout que contiene todas las configuraciones para crear la pregunta -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium_margin"
        android:elevation="@dimen/small_margin"
        android:gravity="start">

        <!-- Título del campo de texto -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_question_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Icono del tipo de la pregunta a crear -->
            <ImageView
                android:id="@+id/question_type_icon"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_gravity="start|center_vertical"
                android:layout_marginEnd="@dimen/medium_margin"
                android:layout_marginBottom="4dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/exit_button_desc"
                app:tint="@color/blue_selected" />

            <!-- Text Box para crear la pregunta -->
            <EditText
                android:id="@+id/question_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:autofillHints=""
                android:background="@drawable/bg_textbox"
                android:gravity="top"
                android:hint="@string/question_question_hint"
                android:lines="3"
                android:padding="@dimen/small_margin"
                android:textSize="@dimen/font_size"
                android:inputType="textMultiLine" />

        </LinearLayout>

        <!-- Mensaje que se muestra en caso de error -->
        <TextView
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/small_margin"
            android:textSize="@dimen/font_size"
            android:textColor="@android:color/holo_red_light" />

        <!-- Layout para añadir respuestas personalizadas -->
        <LinearLayout
            android:id="@+id/answersLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" />

        <!-- Botón para lanzar la pregunta creada -->
        <Button
            android:id="@+id/launch_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/small_margin"
            android:textSize="@dimen/title_font_size"
            android:text="@string/launch_button_placeholder"
            android:textAlignment="center"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Botón para mostrar la configuración adicional de la pregunta -->
            <ImageButton
                android:id="@+id/configurations_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:scaleY="0.6"
                android:scaleX="0.6"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_config_hide"
                android:contentDescription="@string/config_icon_desc" />

            <!-- Texto para describir el uso del botón anterior -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/configurations_text"/>

        </LinearLayout>

        <!-- Layout con las opciones de configuración adicional de la pregunta -->
        <LinearLayout
            android:id="@+id/configurations_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:orientation="vertical">

            <!-- Titulo del grupo de configuració de usuario -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anonymous_radio_title"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:textSize="@dimen/font_size" />

            <!-- Radio button para configurar el nombre de los usuarios que acceden -->
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:orientation="horizontal" >

                <!-- Boton para que todos los usuarios sean anonimos -->
                <RadioButton
                    android:id="@+id/anonymous_question_option"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:checked="true"
                    android:scaleX="0.6"
                    android:scaleY="0.6" />

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size"
                    android:text="@string/anonymous_question_option_text" />

                <!-- Boton para que los usuarios tengan que acceder con nombre de usuario -->
                <RadioButton
                    android:id="@+id/non_anonymous_question_option"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:checked="false"
                    android:scaleX="0.6"
                    android:scaleY="0.6" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size"
                    android:text="@string/non_anonymous_question_option_text" />

            </RadioGroup>

            <!-- Linea para dividir los distintos grupos -->
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <!-- Radio button para configurar el numero de respuestas por usuario -->
            <TextView
                android:id="@+id/filter_users_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_users_radio_title"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:textSize="@dimen/font_size" />

            <RadioGroup
                android:id="@+id/filter_users_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"

                android:orientation="horizontal" >

                <!-- Boton para que los usuarios puedan responder solo una vez -->
                <RadioButton
                    android:id="@+id/filter_users_question_option"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:checked="true"
                    android:scaleX="0.6"
                    android:scaleY="0.6" />

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size"
                    android:text="@string/filter_users_question_option_text" />

                <!-- Boton para que los usuarios puedan responder las veces que quieran -->
                <RadioButton
                    android:id="@+id/non_filter_users_question_option"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:checked="false"
                    android:scaleX="0.6"
                    android:scaleY="0.6" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size"
                    android:text="@string/non_filter_users_question_option_text" />

            </RadioGroup>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/filter_users_divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <!-- Grupo para configurar el numero de respuestas correctas de una pregunta -->
            <TextView
                android:id="@+id/multi_answer_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answers_radio_title"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:textSize="@dimen/font_size" />

            <RadioGroup
                android:id="@+id/multi_answer_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"

                android:orientation="horizontal" >

                <!-- Radio button para que la pregunta solo tenga una respuesta -->
                <RadioButton
                    android:id="@+id/single_answer_question_option"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:checked="true"
                    android:scaleX="0.6"
                    android:scaleY="0.6" />

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size"
                    android:text="@string/single_answer_question_option_text" />

                <!-- Radio button para que la pregunta admita varias respuestas -->
                <RadioButton
                    android:id="@+id/multi_answer_question_option"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:checked="false"
                    android:scaleX="0.6"
                    android:scaleY="0.6" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size"
                    android:text="@string/multi_answer_question_option_text" />

            </RadioGroup>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/multi_answer_divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <!-- Titulo para configurar el temporizador -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_checkbox_title"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:textSize="@dimen/font_size" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin">

                <!-- CheckBox para poner tiempo limite a una pregunta -->
                <CheckBox
                    android:id="@+id/timeout_question_option"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:scaleX="0.6"
                    android:scaleY="0.6"
                    android:textSize="@dimen/type_fragment_title_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/timeout_question_option_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeout_question_option_text"
                    android:textSize="@dimen/font_size"
                    app:layout_constraintStart_toEndOf="@id/timeout_question_option"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <!-- Campo de texto para indicar el tiempo limite de la pregunta -->
                <EditText
                    android:id="@+id/timeout_input"
                    android:layout_width="@dimen/large_margin"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="3"
                    android:visibility="gone"
                    android:layout_marginStart="@dimen/medium_margin"
                    app:layout_constraintStart_toEndOf="@id/timeout_question_option_text"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <!-- Texto que indica en que unidad de tiempo se debe indicar el tiempo limite -->
                <TextView
                    android:id="@+id/minutes_help_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minutes_help_text"
                    android:textSize="@dimen/font_size"
                    android:visibility="gone"
                    app:layout_constraintStart_toEndOf="@id/timeout_input"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>